Обновление HTML файла

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 "sum_dau": "DAU ЛК+МП",
                 "registered": "Зарегистр.",
                 "web_registered": "Зарег. ЛК + Aitu",
-                "app_registered": "Зарег. МП",
+                "app_registered": "Зарег. МП (старое приложение)",
                 "registered_total": "Тотал рег.",
                 "web_registered_total": "Тотал рег. ЛК",
                 "app_registered_total": "Тотал рег. МП",
@@ -355,7 +355,6 @@
                     checkPassword();
 		}
 	    }
-            
         </script>
     </body>
     </html>
