Обновление HTML файла

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             }
 
             });
-            const PASSWORD = "12345";
+            const PASSWORD = "Telecom_dashboard2024!";
             function checkPassword() {
                 const inputPassword = document.getElementById("password").value;
 		if (inputPassword === PASSWORD) {
