Обновление HTML файла

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     toggleIcon.textContent = "🙈"; // Меняем иконку
                 } else {
                     passwordInput.type = "password";
-                    toggleIcon.textContent = "👁️";
+                    toggleIcon.textContent = "👁";
                 }
             }
 
